# auth2

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: release.yml
.sqlx/: query-135de57a26b9e3fb91ba372cf10ce0c5e69670d0e497401e792fb149c81b05ca.json  query-18a03cd52ce3a32c3224a9f34684430426e87e0a9f80a45197615a6474a01658.json  query-1afccaa678e5fc45697a152fab382fd9278d2d3b599574a3b3625c8b244dad9e.json  query-41d44741b97d0f4796a72b48a41461fc39c49d936059832b29adb23692c5f46b.json  query-474999072041ef3296a202b1e68afa6435225cb8b3da596b677b574a052c21e0.json  query-74de18885ab5372573f47d7c52b4a39fea30b8f166da4f1e21289918507d8fcb.json  query-81c9723d80b89ac0c56bf89b599b1bd3ac7081d94a6e4a42dd09f1f74a8fe338.json  query-9bf48171e427f3247e31ab99ed0387aaebdae9b7f0291f2c7e760e4c9313ac9f.json  query-f72dd1db03c96be905deee3cdb166106ebb9c27e2d403eac8028b09a05fdd38c.json
deb/: auth2-gen.7  auth2.7  auth2.service  build-deb-arm64.sh  build.sh  ca.conf  cert-name  changelog  conffiles  control  copyright  env  gen-crl.sh  postinst
docker/: Dockerfile  haproxy.cfg  server.py
docker/python-echo/: Dockerfile
migrations/: 001_cert.sql  002_webauthn.sql  20240126185750_cert.sql
src/: base64.rs  cert_info.rs  conf.rs  err.rs  es256.rs  html_template.rs  jwt.rs  lib.rs  main.rs  server.rs  webauthn.rs  x509.rs
src/es256/: es256priv.rs  es256pub.rs
src/webauthn/: authentication.rs  public_key_credential.rs  registration.rs  (+1 more)
static/: manifest.json  style.css  webauthn.js
templates/: authenticate.html  certs.html  layout.html  register.html
(+3 files in other folders)
